[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/LoadingScreen.gd" type="Script" id=1]

[node name="LoadingScreen" type="Node"]
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="LoadingLabel" type="Label" parent="."]
margin_left = 525.0
margin_top = 320.0
margin_right = 574.0
margin_bottom = 350.0
rect_scale = Vector2( 3.5, 3.5 )
text = "Loading"
align = 1
valign = 1

[node name="EllipsisLabel" type="Label" parent="."]
margin_left = 660.0
margin_top = 320.0
margin_right = 709.0
margin_bottom = 350.0
rect_scale = Vector2( 3.5, 3.5 )
text = ". . ."
align = 1
valign = 1

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_LoadTimer_timeout"]
